--- a/data/posts/vi/introdution-of-LP-modeling.mdx
+++ b/data/posts/vi/introdution-of-LP-modeling.mdx
@@ -21,8 +21,8 @@ Trong đó $b$, $c$ là các vector cột hằng số, $A$ là ma trận hằng 
 $x$ là một vector cột đại diện cho các biến số.
 
 Hiện nay đã có nhiều solver giải mô hình LP rất hiệu quả, tiêu biểu như
-[gurobi](https://www.gurobi.com/), [scip](https://www.scipopt.org/) hay
-[coin-or](https://www.coin-or.org/). Vì vậy nếu ta có thể mô hình hóa được bài toán
+[Gurobi](https://www.gurobi.com/), [SCIP](https://www.scipopt.org/) hay
+[COIN-OR](https://www.coin-or.org/). Vì vậy nếu ta có thể mô hình hóa được bài toán
 về một mô hình LP thì bài toán coi như đã được giải quyết. Tuy nhiên mô hình hóa bài
 toán không phải lúc nào cũng dễ dàng vì một số lý do sau.
 
