--- a/data/posts/vi/logic-puzzle-modeling/logic-puzzle-modeling-binox.mdx
+++ b/data/posts/vi/logic-puzzle-modeling/logic-puzzle-modeling-binox.mdx
@@ -132,7 +132,7 @@ xây dựng biến trung gian $z(i, j, k)$ thỏa mãn
 ### 2.3. Hàm mục tiêu
 
 Bài toán này không có hàm mục tiêu, bởi vì ta không cần tối thiểu hóa hay tối đa hóa gì cả, việc
-cần làm chỉ làm tìm ra một nghiệm chất nhận được. Về mặt kỹ thuật, khi lập trình ta có thể để hàm
+cần làm chỉ làm tìm ra một nghiệm chấp nhận được. Về mặt kỹ thuật, khi lập trình ta có thể để hàm
 mục tiêu là một hằng số (mình hay chọn số 0).
 
 ## 3. Kết luận
@@ -144,6 +144,6 @@ tìm ra những cách khác để giải quyết bài toán một cách hiệu q
 
 Tham khảo thêm các câu đố Binox và biến thể tại [Krazydad/binox](https://krazydad.com/binox/).
 
-*Code mô hình hóa Binox bằng python có tại [LogicPuzzlesSolver/binox](https://github.com/Tung-hehe/LogicPuzzlesSolver/blob/main/src/puzzles/binox.py)*
+*Code mô hình hóa Binox bằng python có tại [Tung-hehe/LogicPuzzlesSolver/binox](https://github.com/Tung-hehe/LogicPuzzlesSolver/blob/main/src/puzzles/binox.py)*
 
 Happly modeling! <Twemoji emoji="clinking-beer-mugs" />
