--- a/data/posts/vi/logic-puzzle-modeling/logic-puzzle-modeling-sudoku.mdx
+++ b/data/posts/vi/logic-puzzle-modeling/logic-puzzle-modeling-sudoku.mdx
@@ -20,7 +20,7 @@ và mỗi phần trong số chín lưới con $3×3$ cấu tạo nên lưới ch
 đều chứa tất cả các chữ số từ 1 tới 9. Một vài ô trong lưới đã được điền sẵn, người chơi phải hoàn thiện
 bằng cách điền số vào những ô còn lại. Câu đố được thiết lập tốt là câu đố chỉ có một lời giải duy nhất.
 
-*Tham khảo [wikipedia](https://vi.wikipedia.org/wiki/Sudoku)*
+*Nguồn [wikipedia](https://vi.wikipedia.org/wiki/Sudoku)*
 
 ![sudoku-example](/posts/Sudoku.jpg)
 
@@ -75,7 +75,7 @@ x(i, j, V_{ij}) = 1, \\ \forall (i, j) \in F
 ### 2.3. Hàm mục tiêu
 
 Bài toán này không có hàm mục tiêu, bởi vì ta không cần tối thiểu hóa hay tối đa hóa gì cả, việc
-cần làm chỉ làm tìm ra một nghiệm chất nhận được. Về mặt kỹ thuật, khi lập trình ta có thể để hàm
+cần làm chỉ làm tìm ra một nghiệm chấp nhận được. Về mặt kỹ thuật, khi lập trình ta có thể để hàm
 mục tiêu là một hằng số (mình hay chọn số 0).
 
 ## 3. Kết luận
@@ -88,6 +88,6 @@ series.
 
 Tham khảo thêm các câu đố Sudoku và biến thể tại [Krazydad/sudoku](https://krazydad.com/sudoku/).
 
-*Code mô hình hóa Sudoku bằng python có tại [LogicPuzzlesSolver/sudoku](https://github.com/Tung-hehe/LogicPuzzlesSolver/blob/main/src/puzzles/sudoku.py)*
+*Code mô hình hóa Sudoku bằng python có tại [Tung-hehe/LogicPuzzlesSolver/sudoku](https://github.com/Tung-hehe/LogicPuzzlesSolver/blob/main/src/puzzles/sudoku.py)*
 
 Happly modeling! <Twemoji emoji="clinking-beer-mugs" />
