--- a/data/posts/vi/logic-puzzle-modeling/logic-puzzle-modeling-troix.mdx
+++ b/data/posts/vi/logic-puzzle-modeling/logic-puzzle-modeling-troix.mdx
@@ -114,7 +114,7 @@ x(i, j) + y(i, j) + z(i, j) == 1, \\ \forall 0 \leq i < n_R, 0 \leq j < n_C
 ### 2.3. Hàm mục tiêu
 
 Bài toán này không có hàm mục tiêu, bởi vì ta không cần tối thiểu hóa hay tối đa hóa gì cả, việc
-cần làm chỉ làm tìm ra một nghiệm chất nhận được. Về mặt kỹ thuật, khi lập trình ta có thể để hàm
+cần làm chỉ làm tìm ra một nghiệm chấp nhận được. Về mặt kỹ thuật, khi lập trình ta có thể để hàm
 mục tiêu là một hằng số (mình hay chọn số 0).
 
 ## 3. Kết luận
@@ -122,6 +122,6 @@ mục tiêu là một hằng số (mình hay chọn số 0).
 Tham khảo thêm các câu đố Triox và biến thể tại [Krazydad/triox](https://krazydad.com/troix/). Hãy thử mô
 hình hóa các biến thể của câu đố này nhé!
 
-*Code mô hình hóa Troix bằng python có tại [LogicPuzzlesSolver/triox](https://github.com/Tung-hehe/LogicPuzzlesSolver/blob/main/src/puzzles/troix.py)*
+*Code mô hình hóa Troix bằng python có tại [Tung-hehe/LogicPuzzlesSolver/triox](https://github.com/Tung-hehe/LogicPuzzlesSolver/blob/main/src/puzzles/troix.py)*
 
 Happly modeling! <Twemoji emoji="clinking-beer-mugs" />
