--- a/data/posts/vi/modeling-tips-trick.mdx
+++ b/data/posts/vi/modeling-tips-trick.mdx
@@ -68,7 +68,7 @@ Ràng buộc này thường sẽ có dạng như sau:
 \right .
 ```
 
-Phương pháp chung để tuyến tính dạng này đó là đặt thêm một biến nhị phân trung gian tương ứng
+Phương pháp chung để tuyến tính hóa điều kiện dạng này đó là đặt thêm một biến nhị phân trung gian tương ứng
 với 2 trường hợp của ràng buộc gốc và cố gắng biểu diễn lại điều kiện ban đầu sao cho chúng
 không mâu thuẫn với nhau. Ví dụ tuyến tính hóa điều kiện sau với $x, y \geq 0$
 
