--- a/data/posts/en/logic-puzzle-modeling/logic-puzzle-modeling-binox.mdx
+++ b/data/posts/en/logic-puzzle-modeling/logic-puzzle-modeling-binox.mdx
@@ -5,7 +5,7 @@ series:
   order: 5
   title: Modeling logic puzzles
 tags: [modeling, math, MILP, programing, python]
-summary: Mô hình hóa và giải câu đố Binox bằng phương pháp tối ưu tuyến tính hỗn hợp nguyên.
+summary: Modeling and solving Binox puzzle using mixed-integer linear programming.
 image: /posts/Binox.png
 authors: [default]
 ---
